--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,12 +9,16 @@
       content="Web site created using create-react-app"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Add Razorpay script in head with defer -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js" defer></script>
     <title>Random</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
