--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
     />
     <!-- Add Razorpay script in head with defer -->
     <script src="https://checkout.razorpay.com/v1/checkout.js" defer></script>
-    <title>Random</title>
+    <title>Campus Exchange</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
